--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Features :
 
 External Resources :
 
-- Aweomium Web-Browser Framework
+- Awesomium Web-Browser Framework
 - Teleric Rad Forms (For enhanced UI . Not mandatory)
 
 NOTE : Working to add in more features like downloads and Bookmarking .
